--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron main.js",
     "compile": "electron-builder --dir",
     "beta": "rm -rf dist; electron-builder -w --x64",
-    "dist": "rm -rf dist; electron-builder -mwl --x64; mv dist dist-x64; electron-builder -mwl"
+    "dist": "rm -rf dist; rm -rf dist-x64; electron-builder -mwl --x64; mv dist dist-x64; electron-builder -mwl"
   },
   "author": "",
   "license": "MIT",
